--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:mdG5qzI8,iv:B7tW/2/D5un77byQCFuZX4KUAYeOXxBFRmnF5KFlkLg=,tag:nZzhSx1Qon+5mvIojcYngg==,type:str]
-ansible_user: ENC[AES256_GCM,data:NXt746Im,iv:7q8V+5Yt9zmjzC2/W8ERgEl/t0eqt4508dkRXoO0XSA=,tag:76FUYpJbSbwzLWzHSFZWNg==,type:str]
+kind: ENC[AES256_GCM,data:IWczCCNM,iv:rsRLdlRYRNX/0MgOApV6buLU+TXSuzTl6+KhugK9IIQ=,tag:Rx9cG9Nz3C+xWeI0pG7twg==,type:str]
+ansible_user: ENC[AES256_GCM,data:Os03o0je,iv:fpjsY02IVm4kYjQmKiUwuLbhx+WHB/hjO9dONZC+rKI=,tag:hcrQsM8i2KcVKnxuoqVOOw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0ZmJYQzFKdHZrK1BBZTRX
-            NVVPTjduRklsNWY5bnorNWtTYkp4cmlLWUU4CnpYU3MwMFdBUThkSVRHVis4MUg2
-            M1V3Sk92T0p1Ly8vd2QxdnYyY0grQ0UKLS0tIE9vTXdtTE16QmNDK1lDbVppbGVJ
-            TnV3NlpyRnpia1cvTjl5WTRXSlo2R1kKq8HtmA4+8qLe38P+69I5Nepl4l0O6WVK
-            opQAgt4b2Z//lUgjrViEN5qe64nuyjPEBckyLX1fe/USk7rB3M3fkA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2clNCUXkrRlR2Z0w2OEhW
+            R0xNdEtBVlU1VWNBN3Y0K0llTWU5aExSWnlZCkNmMldFTjZMVTdxYnoxdS9kbW5B
+            TDBqQ2pSMGw1SE5QZkdkNzFScE1jNmcKLS0tIHZ2ZS9yNEU5ZU9takNFZUZQYTFF
+            RldSYjZzdzdzWGlhaEJCNm5JQVVnaGcKnKkxTaepLtBAORGR3Y0Z82TcmPvMQPZS
+            IE/Mmik+4NjBER3a4kpcvVioctCqMTGQgo8RzfZZ2Nnb+tzPTksTZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T05:12:41Z"
-    mac: ENC[AES256_GCM,data:mD4OVuRzWa/fMrYJT29OXlvclhAw3akxg2sI9ri2Gd9f7eHkvYJnJ9lJy5dDYpRSbjlbh0t1Bqiu0rarhawnx4LMv7+NfCkWOlsv9mf4dyIO1sjopUc3dTemFajoRPwB0Dg5VcOyVZ7tRiTTd0TEjYXnUo4xXZK6Sl2fT4W7hc8=,iv:JqvfAVWRFwQAJdq842wbbm6Z63v4hUIo6027fJVyTYU=,tag:kKEbJO+a2N8HL2DAe6+53w==,type:str]
+    lastmodified: "2023-01-29T22:11:07Z"
+    mac: ENC[AES256_GCM,data:0MVvuf+hRcvNw+eO8W97+I8ZKHLDAKXR0hpp6ozrT1wzNrcDBkszBM8Jft5aLnfmtRUhlmge81/WCaglge6Dsw6nKbnzxUNepRHEidxi0JGlP08Y1HMI4bscZzLdfYbZBOooEfm9eaW8aL7vu0LXond3B0JTRnAWnFaJ6igSdDw=,iv:Yqxxy86S5AGkk6ThKEimY8P0Pcp2/CjvBVBcI/Yf74M=,tag:NbGMZh2OVl7EsGt/YJXgJA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
