--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Xi8tyQ8x,iv:T+aUEVTpusHJRcNTmTKl9HEnUzaxfGBM5MM1Hn1zYYA=,tag:4dbIv+u/njw4xnedM+CO+A==,type:str]
-ansible_user: ENC[AES256_GCM,data:LbZHZysg,iv:eCj+nFmAo+dIilgkKD0qBujTNN2mfy6a2T6AG4EvziE=,tag:7z0Oi+15h+jm+cwu7m1GbA==,type:str]
+kind: ENC[AES256_GCM,data:MTdZwNWC,iv:PeoQUWrAYDXh5Xy/i9S13RUznzvkuJWJ/rupn54BUmA=,tag:oHMU4c0LDhlQCKDun18HXg==,type:str]
+ansible_user: ENC[AES256_GCM,data:q4NA3bEV,iv:1UocjQHhF6gjjCkloQwegkykq5avjTYcpU0H698xuIc=,tag:WLrHPzGau1zMpftAVSfIyA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvTEtrOElIdUNwRlVUaDF2
-            a0lRTW91MTUzQk9pZ3NpcElLSkN5UG9td2s0CjVwb3lWWGFHMlVqejFJRXlUTDNy
-            YjJZYnNvaDI3QjNRbUQvMndpaFhsT0kKLS0tIHlwZFFZVzBZNGtFT0RPejU5MVJJ
-            dXJJdzh4Z2U3MDNwQm55eSt6eWQxcncKQVQBikWeypoimlWZK+e0oquI1F25Xs0Z
-            AGcGAzVM0kcTIysO/hgixcx2JKECcLqmuW9vrzh51ynQY+dPXTtvvg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjcndTTVJaMVF0bTlYWjB1
+            Z0FGWDRWbk1XQ2E5WVNEQWNadlN2VnlsUnlBCm54blFyNlo0a0RiV0xMSWc4azY3
+            Rm9vTGxpUDdGZDJHbEJXc1dNQ0xRNEUKLS0tIGdLeU1wM3I5cXhmRlhGSlNCMkls
+            N242U2lyR1hOUHdCMWwwNDJEL003V2cK8qxguY6lsmx+D0FvqlhiA6nU1bk+Bldr
+            CDcLwiZwhgTJPgwfj88RrxUG/FeDo1JpoXzuSzYFefj3RhHyL0ky9A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T05:12:41Z"
-    mac: ENC[AES256_GCM,data:DCgqmHMu7Yzv3PreKKHy4x5GelUJNrEEH4mVtMw95pltDAOhsUEXOVtpay8kU1s0KObaik4qRAf9QfBt1EqL26zn1k8/2Sa4WB/XBAVzdNsH62QyTBwL4e+tfJhaQ5pzWYsT8++IYvEsRZMMYGgUsy+Wy+fJH15z3ZAtyd7+W94=,iv:Qv1rr/FVW0+ucxGbshZAySuF9uBjE3X7uBwbfZ5+puk=,tag:Hmcj+VTOvcPXCuSLcjVFdg==,type:str]
+    lastmodified: "2023-01-29T22:11:07Z"
+    mac: ENC[AES256_GCM,data:+GEMpcmz8KN6L8TDHjV1asBc7fHSkcNoFfEDbGPg5rDJ7d2T/PdwA77sGRxMFNjXZM0hh483PpWYX1Mb87l0268QMYSNhGm0OJlMdSF3IYCRGGaSK9tShZsIUuWlqoozxJJ6pVpHxI9dhmhSvKp/2lx0+M9hFxgqkjz0w1Re5tw=,iv:thaRpkKfVcTCqDKhUhzj+fwS9v2tbt4EDVQE9rEm9qg=,tag:jXG//h5Lp+W2+uSDu7eBLQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
