--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Tp8ecgbo,iv:FA1zCdhRiyuMXqyk+tGuJs7LGYO7RyQnBewl6whJkwc=,tag:0sahTDPlcfAT9vhlC7KzMw==,type:str]
-ansible_user: ENC[AES256_GCM,data:lFhEcc2r,iv:amlbNlOxo6MuMQOzSDbujo1Rnbm3AMtQSJ/J8uYt1gw=,tag:a1yY2JQpM5Hk5gVD+EfRrg==,type:str]
+kind: ENC[AES256_GCM,data:aAFYMPhg,iv:shOrnmxprvWQjHD2vPw9B9IomsqYSHU6W3RoMR1H7ak=,tag:ReotXa4APD6bBf8wqFfnkg==,type:str]
+ansible_user: ENC[AES256_GCM,data:yWQnTabX,iv:1Bd7sfPnjYKM1XMDnl6j1iNVcICCFetwN4e4NRtFG+Y=,tag:s2LCyWfT/AUHJPRfSYhZdQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoem5ua051ajE5YzRlYXpx
-            VkpCMGlHb2MvT05QUXo2RTdwYTc0L3FuOVg4CjBBSHNYSXdIWnE2YW1lZ3V4MExJ
-            RVJscldzVG9tQnFNbURNSEJ1Q2VCdzAKLS0tIE9PcFdDTFJqem4yVmV6V2xPYWd0
-            YklscVZHTk9iRC9XVVh6K1B6eFZCUVUKsc1tSKc52/UC8vmYHVa/Rv3zrHuaLuOe
-            dD//D0x6LpLxZGaI3DNQVVqJzcfTaQkLZeS3QHB9g+IYIEzzEYY50g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxMlF1NHJWazRHc0N3UERk
+            d1MzQUNKQm1aN0VLMERva1BxdUM0VUtxRjBJCmQwb1JTUjQ4NFRidVk2UTBsMXQr
+            azcxcFEwTkkzeFBXYjc1UzYybGdncXMKLS0tIHUwN3cxTFNOVXRNSWFtTEJ6cms4
+            MGJOV2Q1a0NSVGR6L0lQL0xBR0U0S1UKVLmRhdsWCh4a3p097Bc8GXffP4jY90HK
+            XWD4an4Sb5B3CfLOMc4kPahhIgsPso1q6DKntfhydEPs1d2nzW6aiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T04:58:33Z"
-    mac: ENC[AES256_GCM,data:88CeEw4R3jDB68pc6ulB8UD3AqJyKOWliUTOY2S9gWH91rPYU4S6m8XNNxbevBj/VGh4ChoFx6NqgJHpHmlLcF92WZn6Bs0F9bl6Ekwtx6eG51Wf/8JfPBVYbAtNoVmm/eBg2JpT9SYA/vRIUCgx7KVDFXsNGfismmylERjmWZk=,iv:wYYW7OoWCt75yUUeIlaDumr02LUlWM/QqWF+wWZrwj0=,tag:8xXAs3z3MxIQT3REDhYAdA==,type:str]
+    lastmodified: "2023-01-29T22:11:07Z"
+    mac: ENC[AES256_GCM,data:y83JLQZ1JGkmYKPc3iNQU4BaxYv/UdGcOgFeEA9e2BXo+YL6ihlqUDPuRmjiAILFZhPOE79P+yoxXa35fwVQkBbyI1ugsCDo73hwyu0MsLYLRtXXEFObCxKwYWSklT2BbzLzjYD8ftC0+pkTqu0zkTOYx99IAyFiEJcwtgmQ7Zc=,iv:Evcvhk0Mq2CAZrvEV9GpwjwL6BOLLUxM7iMabNZCrXc=,tag:/Vuhkgm9f8SZHlsCX+V6aw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
