--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Vm6YohVh,iv:s+VaLkEAiKEf/hxqo2XhM+mSnoHzrZG3oNsISkRAhcg=,tag:z7WggJt0pDBC9qjndOypKQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:daHFK73D,iv:dFCKRDmnfkf+0xEo7QfX0F6wURKBaxIjqkuVB5acd8k=,tag:QZjtxZ1/QjVX2Ga9VgS63A==,type:str]
+kind: ENC[AES256_GCM,data:NDbaDCBf,iv:pmA93sf9iAYpWKwarLLKi0d3jrDPZd9JvK7l9WEgLlY=,tag:kzeYHCl8REyHYx/6u8lgoA==,type:str]
+ansible_user: ENC[AES256_GCM,data:JRK4krWB,iv:TdnhU3RXkN2HFxs951/+jT4mQxXld1kFr0VDjvDvL9c=,tag:OAhT/DShEYg4kMQk3OL0Zw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzalppc3FsY0tPMHJ3ejc4
-            dFArM1JwaVovNEE5N0FPcHYvK1NkVk81TVRvCmZ4UDlMSmNzZDZGVkZXWDdKa1Ny
-            cDZoUWpveWdQM244RXJHRjQ2WlY1L1UKLS0tIElUL0NVNC9JNC9TaW51bVhEZE1s
-            TVVFeDAybC9hR1R1amhLWDBKeWVNWjAKezWzODSE1wuxl/n1FRXUTB8CsO1+2Z5A
-            zHWfB8K+qxqg0tjLTF47igdo3o8FQcbzrvzYTxgpUymCuZPY2m6Qig==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnSUR6V1g5N1JwRjQxc3J3
+            VG11dTlRbG93dGMwTHF2UndTMkJPYTNtN0ZNCld2b0hrVnBuN3QyYW92RGU5VDlr
+            UytTS1NWVzJ2YXl3RkpSZXlsSFZrTlEKLS0tIHBvVjJwR1k3RVAvbUFBTG80Umsv
+            MURTdDFBSWpXVmRJU0djRjNETWQ0OUEKpl/PYDRAdYRYog60z0IjpawS1gdtUva/
+            nnyaquSkUTDY5hnxF1w+3k3tyJFIrLOJNLyVI2wJEPM83cWARWRXlg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T05:12:41Z"
-    mac: ENC[AES256_GCM,data:/iBuarJ9jszev8q2LMuxd0LlkNXCIyrcTDt0xJY3dXxMw4k52y3pYR0nnBbKHxcNqnbph7Bsi0AnsDP/AfpxVggxrOqv9zWAWHxBqFo+ilDs602rqgbUT55PsdOKwHVXZLYsa9gVUkFw3cJK/5iKV4KrK6lA9SkjM3QvuXLc5qc=,iv:tzOSNyt0feuu6vOCtC7tlROHPD+oloLa6ngwuwanLS4=,tag:AW2TtJo4HQL5HPAD5cqBMg==,type:str]
+    lastmodified: "2023-01-29T22:11:07Z"
+    mac: ENC[AES256_GCM,data:/xOJHzjqlWbOaxBQJfA+KHbbykU9AwvkdF7lsfArTwJtkWLVnF6ifbEcMqfn8w+Iuzff54Aku77z6sV9eNppIQrDtBX1HkCIo+154l+pg3s4OOp+hy8U5P9WJBZsVldVIXRR2MrjvtIZJyTytiNQKgS7U6OTXMnCMYoWM2dmxFM=,iv:wp4ql2KggnyAWWBniL/W7s/CxZ/jbBSX0Nke7ZzMj7s=,tag:YRXJZzr+UacoPas7BY22bw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
