--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:46uGkdi3,iv:PbBAIjJbMEqtOpqA7Vtao0chGX8hB0OzOwD1zxP6CBE=,tag:RSsMa/ZsUWZLgJnZY+SPCw==,type:str]
-ansible_user: ENC[AES256_GCM,data:EpI1WhTe,iv:1t1jqn/6qMgcw00+CF2byEzYh8vA0jCwD/Cgi4hZbl0=,tag:c+HgK6uTwWePxcAD/DHyNw==,type:str]
+kind: ENC[AES256_GCM,data:mqEZxeUd,iv:/4Gvb69yxUXrRQTtI7XL094uXkjmJHCDaX9pxvcx3KA=,tag:QY8e0lL09A+8OJefl0usJg==,type:str]
+ansible_user: ENC[AES256_GCM,data:09gnfGhg,iv:XoLfs/q5H34R7tQ4I60j/we4Hf3Wl0UKXOpBQ0Fao7k=,tag:IYxZbmf0lN4WU5hoQD8fMw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2aXAzenY3eFE4SVR4K1Jy
-            QWlNS3Ezc1ZYSmlEeThwK1ZnNDJDTUVJSTM4CkNGSzZuMHRHMHNpbTlSN0ErTVA4
-            Nk1NczhnVEJBUXN6OURpTjdieXdlTlEKLS0tIE1QNHg5Yjg4R2ZMRHcwRUd6MDFD
-            YTJIaG50M2p3NkdiTk1CRVQwT1lJVWMKfMDO6JToFYqRjYaBYgOsC7BWYRMjF2Pf
-            vZzdKFCLzWrQLo0HdbASKurZIJN8677MoFlo2z0BqX7ihly6WRz2Hw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1MGR2Zkt3QTF5d2lzSENE
+            RU1HT3AvODdNblR4UGtZcnhJL1JMMXJHeTFzClBHTWh5dHNRbzhmd00wekgyQWNz
+            d3VSTTI0cms2OU9KeHpsRWs0K0xveUEKLS0tIDQwZjJJczZZbGtBbDhwdG9xQmla
+            THhhaTFvVHlXMmFmNStsazN6MTAvWEEKC03gr1k8PI/fq4uOU34FzX4abtpQRtPO
+            Zvdn7hl1yrPGadrnXnwaZaPGdV+3IHiqehjBmfr9PEoylFLf4BaDlQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T05:12:41Z"
-    mac: ENC[AES256_GCM,data:DKEBvGPmNFR5Trn8P52vXn4U/AQd1Qfh7nWB/K7Tfuqd9Va9HwW2nn0AMuSjW9nfZDZaN17JKwig7LCMbLl6fmp8HFXFXTPqO83H2040tO5Y2/Hui/NxQ1mBFB6OyYWpePaAaSWZQMVWun9f8OvRfJ4y9MhK7Wh7+fyjWLe3HoM=,iv:SIHGBG9slvlhV0QhyY6ucQlnqWE/IALxr+WHb7AuuFk=,tag:sRwK1jb+BMv8C+NDBzhDRg==,type:str]
+    lastmodified: "2023-01-29T20:47:13Z"
+    mac: ENC[AES256_GCM,data:l12d8lihEsft9wPFDbfUlslafbBwBNnj92kU/YhkzZ2hNJkRaw2YM9+cSNVAw5ptAkme5VbC26Hi5fayu916txKy9nStaHbrwiHJX7IqeRHkVz2lcd/oZLxHUTs0TAcDb2hX4EcK6RKtwOMutfzPPYDip6NvJEJdJ4j4Mpzpjy8=,iv:TZilf0f9gYRFMFEpnzKjXWsg/N2rOQJiD5yuSKL56bk=,tag:dR8R/xMBYhL3IVs+MKtvug==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
