--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:6F3OI/c5nYuzjA+frEETC8oeokv3,iv:FH4qEj2H8DlW/sDTbON7NxCsvGVEvWR8CpAz67uHOEA=,tag:40phKnaS2umYigrwBOdtmg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:sCKgKFbI+hAXi1cmCYJ9FGwuBXJhEOFrasQKY+QXsZoFjg/fcw==,iv:FzPsHCERL/1dc7pY+LeKurBd2+a1uycbjE34KB7AdA0=,tag:ySKIHx8q1AQPUVzblUgIIA==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:uUtoPe1TKLDHWi4=,iv:7jA/6NxBT03++PVVfXt3mrwXqHT3fLRBBXZAfiLpMTc=,tag:2iP3b85pbFvGLxdab1jauQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:UGD0gS5FUAMaoBjqgXMkb9t+xQCF,iv:ZhKIpUHs9O3WDgYscTkijtgAyjzMH75+BaRtMihwK8I=,tag:t5Xh9lFiu5snb+VAgjSF+g==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:gM/U6l1zEn4+3CRQVzA7k4ARZvc0EGFGOItV1hdlFdk15Nbotw==,iv:10mtRpMS99s+dgYJQYwM6Fh0Sm1XMiKtPkGBv3gN51A=,tag:NRzhZ6JoB/aqcTfKrnafXw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:vdJAXqLD0x0laq8=,iv:PEdwguisRc69uOonM9lqJffFvjlCiGZ5qeICuu+xMcc=,tag:/CGdNsmpg5cI4gmYn31OBQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtZ3RUY05hY1pwSUdURUU4
-            eUpjVE8zSWZ6b1AzTmtESGhuQmR6RjBlcm5rClJPSHQzMmpVWm00emdzN0s2NmlX
-            dDJGNXlzOWxMUzJCS2FRM3h5MzZwUzAKLS0tIGtZemdjWGdPS1BCUHZUVUlUcUpW
-            L0pUL1lCMHZyVjV0dm90R3VkdVIyRVEKuLm/mAiFtRH0d/zrYsE24QJRilGdQDTE
-            en9A6qfwe2KzpZ9mBqwWVnDnMvUuaQh6Vrfy3k/1xPU20+5YBuJYnA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYMWluandDN3lrOXNWaDcw
+            aGNVZldXeE1oNCtOM0Rld1g1VnQ2U3hhdzFNCnFoMjdpV2dsV0pWa0xhdTZncFg1
+            Y1lEMlMxQWV6bVpINENRUHFXeUtMU00KLS0tIGNLSkRUSVh2UWhaN1FqaVE3VWlC
+            KzVaTDhldG9aSEd1MkZyOW5LaW5VL1UKQ5fRmoX3OwT1CyYqYxp2N8aGSfFdOy0W
+            mU5ADR5z1uf8y8nuSirCP1YzQKNA1dZYezkNvuhXr0+6S1Ui5cpKlw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T05:12:41Z"
-    mac: ENC[AES256_GCM,data:mJYPJTZWGQqi4Satv7P78u1gdR+pQqYw7hA4XqwE4/84/u9DeEzi0Yxza4zkTZjW4XXQD4BG+rdOkLQNGS6auzLZlxA99ZZgkU41Xp36EtAlgD/eZ0R+XBkPCIrGwxvZ4XJzN2MWfU51ZcYrpHlnaaU4LkZEB989tgjnvMcojgo=,iv:Souc/Kx62pdEwkRAWi5nL5z6o6IkOVloA0jcZtpX+ak=,tag:nHoRArQN7i49smWHldh+MQ==,type:str]
+    lastmodified: "2023-01-29T22:11:07Z"
+    mac: ENC[AES256_GCM,data:bhQHQbbUXKi8AVoZnlsf251+VoqfDcZXKwYxLjcEeK9ZtFb6BJhtG6aJ4Z5nONiZEn6tN8V6f4Isdxe7M5iC+E+pzdRQNRUFTGP4LxpJGmqj6AMAdbvCzc414Y69sPV5XdwUsbnTaTDYUJlEBDbccrwTWwCxMvyIL6RV6bHxpSM=,iv:YvCbfZuSzBgzIBQy8++hB4EuTWOiZ224XdAQo05QUfQ=,tag:O0Yt4W3+iNe6BC2e0Rwozw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
