--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,25 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:oiYNSqSzyVBKKrE=,iv:GkH36Rv7vjkPPBUVF1E/DuLQmtFeq1TqcmKEv8CG9ds=,tag:DyQiMg6FcsyPgWi1oeELqw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:zBQZS5l06dIagbSzPKzsU4UFdDxP,iv:sloDkqeKJn+3CM4av+0vHAs49e7kMNSMiq3H+am3j9w=,tag:dB8Q7+upYeWc2llrtmSgWQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:uj/EzqcF8cgNPPj7DEcOFmQ0Y+fwjJeS0+407aF8RCrX/IK2AWgVuFuoRfspTp3C74KSplUSUv4T8ziPjcRE6dQvZ+eD+38=,iv:lDa8umisayNmkF5cVIM0s2i9Ep7aC9g7Ly2gVkg+DUI=,tag:DD1lGQRRjEwE4/AT+62OEQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:fskcyA/vfYOc2dNZzdqFdr7rzyQrurApYur/iPF1Ntsr9ow=,iv:MihZ7gv3TO7wcsVGSjYIFpNCjWBXDK7EAyQggcv+7QM=,tag:f6NC9Cyzv2cbzhci/rz1Og==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:zyE4MHb8QzL3TxC744xt5qxZ7w==,iv:BwHuQl1y62wHMIg6ku+fzkl09MOluFNjexZe5agJUCc=,tag:AfotW3Mpy+nzL7eq0RNZPw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:NRWc0gQfQmxhO4fvG/syA69LQUUM,iv:CrsBMvdUst02PEP95LWlwp/8QHKSifRjWrZxrX1uMMA=,tag:AGdJai/JlufHqPXmfzOspw==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:yPxwT9pYZBY=,iv:+NSeO7fJDAPa8W/KZwOv5OCQP/X6ZB90r9qVvzBKIto=,tag:ac61bZkjvRi1rhDQ6Dwq1w==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:HuRkXf6tBF0=,iv:uGu3GRg3t+yorMB4FV6gCIErPetzQSk5+5AT+Zxs/ZY=,tag:6QvbKjCNtDSulCRlctI7jg==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:sSN6FCoDRCCGxrJDva++hHRMPyFeb2sbWNqlIOneYNCiOnyEgaYmtB7UwaEDrHChqRqzzRUF20XuM39hf9ijdQ==,iv:08Vpl5vunyBWTqRalgI1hlxg/BacdUhzUeubDA8qW2M=,tag:uEc4aRiuCiMsdr7RBvp0+Q==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:M1gMGKsYNNR2XMiIbpYrkSVbOhmJynEaXtoeQ9KnM+wTgobdUAnHDnw9moKsFL9Twpf7CKHDoOQ99sVensG3AA==,iv:3I+YNdusA+OW2mrPZJNmPvObGJKMr3bnHpqRieo4xP8=,tag:kOZjqV7YX5DWyqM3O1VcNQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:GBi6C4XjnVsm,iv:wPUOQoLp5LWoX6acvKp+AtOIa/Ks14Wg2aTvg15nXVM=,tag:cbIQWmZbbZBEl0Utmauclw==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:vKlV/KgcpJB6Ks3ZevKl,iv:7ox2tqNeOBZRnEm/SybERXILUVKDfB56yQdUUhKNVzY=,tag:Gfebpu/4AQhdASd2xnPeGA==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:vDh8xRe02alDG94vh2aIO19rbIMTnHBHZX/NbEpqEjEM2djL44F4r2y+uWI/YW64GDc=,iv:7SSdwE0fqOSZQJoSYSHl468Cd9k49UYVJeDXvPZxWv0=,tag:6EtNtxQq0Hs7ZMnR+iFpkQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:wxFUVVZuLfQ1KoNr7sc=,iv:kT0yuxwDVvD3meBGwcwOdbLrXigAYgfzFY7srmHc7OY=,tag:rDLvpFFpwu9nmVSdgkwhrQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:9mWIhVrTPbj4uVyg/O8o3lALdqs=,iv:6J23aXh6yQf7m7ZaIp4wOA/3g0Hy4bfcqR2ovrmlyxg=,tag:7nUXZJtEoQVy8KA3d2g3Ig==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:Ocf0H3e5lag=,iv:UXjdKZVv78D18lbb/fZFD3x5R3Eu6dnlYUAgWUSt7KU=,tag:PD6CmNRXoGzIZ9ii3H/N7g==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:4K15XGGO7UP0sio6,iv:9vraJQ0i277E3eXTIHTInzflRW88NE3+B1Fbcs4B5k8=,tag:vorFIFes0kAPlEbn10TrhQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:4m+1xasjYJIV,iv:ngmXHK6Gwe5MEhAxXwddXv//0/+RevexHwiabZJATHY=,tag:EVBaHk/9apMg0PQXlh493g==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:BXPGydKnEC89,iv:WmQd+7Pp0iBdQZwYZu5yWMet84FszMYpdQ89dRB4BeM=,tag:sBgoH/Wnjsj7vbxLXgK2EQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:ycoAwtnp1/kDEa0=,iv:6+25w99vz9aLNfeznQScyZkirywgQykt5+FDLn+tgIY=,tag:QaGXgf/rWzGvR5tJpSo0aQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:IS/my7ryM67WOgqK8t7QWRjUgnIc,iv:S12N9RZoFrNG6vLrBd/D55P6zo3q99B4CrTW0TznuwA=,tag:PooJmimVWu8vbJ/2NlwBTA==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:F3DpvxRT87Un28Cc79wh/WtJCR/TWZ9HXHq3UUC4xHhnWCXA786zKaRwqk3qXS48OHu91uNjApZkm6vqUGC302mQ6Kox7Y0=,iv:V2kt0DT7dDv+8FxxSnToILoubocMBmOF71Uc6qiv5ew=,tag:/R90xrrAwx+acH1IUo6esA==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:6qwqEP/grTsEWhFx4GDZvlFWgoU0PFzXkbFx1GjOhXhkPJE=,iv:9PkS9VK3OT+VSQfQ/2y87DobVPBNJKrvBQWpYIhAtCI=,tag:0g7TYTvHxIfxCwCI2luMew==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:A+WEJtUW233/ndUBl8cMeh+ETg==,iv:qrz3f37Q5nHrQvjtVrZ6KbJAt+yj1Z7JXD3UNKpa654=,tag:trubt3IJ9yIBwFLxpfwROw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:vG29rrVHm0LgoauRwU/GPu5DFiKr,iv:WneQL5Q/cgI+GOfY0X8u8JBY4lA88QCeU/PxpcoaPqU=,tag:Vq+Fu8YrwbXBE6hNTT2/1Q==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:T10w/WX7D8Y=,iv:gaX/N8T1daDZpYi38sWZ0k/ErvFJ0WlRVwJPPvTqRI0=,tag:PxnQ6iZLT3nb3WZqUmFtng==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:m8uVQ6ktzXg=,iv:L5lhPCkc34TRg+BkKJARw3EcSB0qjoknqg3HvKH3V/M=,tag:nYogrbGwxuAhB0wh6fXHTQ==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:9AomuxRSfpM3Rhj5cJCh03wZKVbUSkM45D7AMMr63fNb5Mr884jS4H6KqjYxgzz2MCaKJRuG8V0vV01p73ppow==,iv:i+6yOY2tbwlOPGZ6RCMu4E73zXExP2j6foIEiLTL73o=,tag:jIHm3kELD5BJg4Xs1eTKZw==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:OJRXEE13d0tRfGkGlBw3SMV8xy/so8bhGi1gx0WJHjcLS5I+L7oS9cxDnnt7Db6L08tCoX7AmhDBk2Mh2QNrow==,iv:jXrwtY2qjUVETM1Vg76SakN+7VfGoN5XI2sLWXSQ+CI=,tag:sPRp9EAH8HEiIen6MC4j8w==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:y2pn1O6DHytL,iv:+G3Mtxf2mxd1Pn9s5dCdQ5KKpv9Jt2a+zyFT9yO9XAU=,tag:Tf9BKIQ6Z8pu7m8A6NfImw==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:Faf8zF7W7NZy6Zj5SuLa,iv:E44FRovbiVRYmPD/JjoWsfYahC2oGWjqDskRXKjiDTg=,tag:8alG3tjO/siIhumiHQ4C5g==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:fWpEM7/lIjIY0IJAYnyt8JEzrQi8uK5hu9acFWXYzx8elljF4O3Wji9FgEnizgD/TAI=,iv:0rIFDzgIkE03jlmzmVK2sgqegRfEMm83OLnVzXeTjlk=,tag:fYGT0l1HXExXwriubcE7xA==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:l78xuy8wi5dMqMMAyk8=,iv:2xB7oG923OIqQ7gyZ09taDGpXHUyqEC6EHBseFIjKog=,tag:AabmIdb1ToO6898GfTuv3g==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:mE0DdEJqRSRorMs0VZKpYFaelt8=,iv:8sckx4OJ7Kl9RvN4rDc66JNuU5SvL5XhGI5WtImd7r4=,tag:52j22WB2m74i73rXf8NDRQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:Lo8Kx8GOY9k=,iv:sjoeWblYfAKwYbakwC8OEjXLI8GOz+wUF4WLcJ9fs/0=,tag:Q9W2KbKXx7fAlQqduZpYQA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:EGwgS0vBuEVO3cug,iv:hw135ci6T12oU6TyDN99bZyrG5BoE95z0hYDgQ8zWsE=,tag:hriCdh+oxuqX0zMSm/jEZg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:QAsppQit5S4X,iv:MJcqDevVH0lW8kUYwLpO+UpqBQ3oirjluMkZ5oyV538=,tag:itYxMl2VlcPSfO89KwlS+g==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:AS1Px2IvHHo7,iv:RIcRZV9uYNmny0I+Am1HRw3IGKAdMPdbsSqI2bOu0ok=,tag:VgfOWmPPvDgOpBq/B0ELFA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2djRabk5wbnN2dElVeDV1
-            T05qWktHc3BaTytVb3VCTDM4eUp2QTMwOVNVCk0rOStodWZrUzVPWjlJWnRrTEdH
-            TDhQM2NQRTNRRjdvNWl5WjNzYWprYlUKLS0tIGd2L0dyWnJjMTczRkplMkI4dXhC
-            QzFjbnEreXprMVg4bkdreDhvM2plc00KIH2HAu/tm7/0orNVc7s6JcqoPKo23VD6
-            xRsumQcG1T/p2dKSMJeuJHQTHqGc8QfbAVxekqvkFJqQd9tcv7XDDQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUbGQ2N2pTakFGREpURE5U
+            RFIvMXRSRVhDdWZoVmVNM05xUHY3RG9vWWdNCmhHZmRIM1RHUndoWkkyY2JxZmZ5
+            ZkZXK2w5QXNNUkJaRENSUS9MTnRzTlUKLS0tIGF4Ky9Na2tIL25ISFVXb1JDdm82
+            N3g1c1BZN1RnVmgyRkdaRkNIWmpkOG8KZksy56GDYRvUOyxSRvif3cDdcPS+mYJ3
+            iw4xMm/5bsoTQ2ZR6IV/GOE0Cxxek5ElULfwQe/1x+O6hOMjzg74lw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T05:12:41Z"
-    mac: ENC[AES256_GCM,data:aEeHgnY4Ll/M1ZrfnpkRyyzb0o1nrygWNdDDJSRh8I7VNQVcM8rqMsNOQO+1s98iCFl7G4ZckShGZ1uGGpqPrU2I6ON+EkNGgZp5qVnp9vp/JixdGThnIPqYa0L3+SVDcN5aMEZ0FMtcs2OJdX2gs8n04GgMa7kjh2gO+0J7uvs=,iv:ZYLvIMFpqE0/9+PJb8nDPQBymWUlKqHBSjYn5YNIvSQ=,tag:S2Q6Bcdl8qkVRZiV45dz/w==,type:str]
+    lastmodified: "2023-01-29T22:11:07Z"
+    mac: ENC[AES256_GCM,data:b3it6kLSYZ9RBcz7j8ZcQqu7W50Kx2ts86pRJf4YSN4TW2YJPEAU8fKBb1RnXEdnhWlnz5JOogZALJLZNBYOUnu+PsmFt95jiAYTwenXxOjvnAtVYMF7+rxyXBOTnJFoPPxGZwq0Znd3hZt/7TnxN60m/qmBV8uGDz6Bdj3k5Og=,iv:zV3MY/Y37ZfXB+r3XM6pccvBjFshNyRhTmhFRUiWPl8=,tag:AnfGiwHru/W51uttoWxtoQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
