--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:CMoiNN9l,iv:zYe+QjZ8Y05VXyj2GtoC1F8SdVZO+lRHwPw0PB3B0Bs=,tag:oKX0xv9W0UdZjRPx9eGcpw==,type:str]
-ansible_user: ENC[AES256_GCM,data:yrqTvtUF,iv:Xuw1gAUqZQzkf9AmUa1WSp0ox3a3xEwUm9UNMn2EDr4=,tag:aQKW6LgnjIF82bEIfox2GA==,type:str]
+kind: ENC[AES256_GCM,data:TIJsHO1K,iv:CsYCbwI48mhNbVTEUZJZSP3HzU8j3ZYidX8BYdxvGfI=,tag:V/3jfpg6NLqLUt3/9tCuFA==,type:str]
+ansible_user: ENC[AES256_GCM,data:xsmF4/iA,iv:7UQwGJ/A29I+GK9b6jZ8CfsoHXKzN8RvPjS8vf64vLE=,tag:AFyWLBYjMFIqAMI8CCsvZQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLV3VySFNhbDNiRThrWEJH
-            cE9GQ0dqblA2Wk1vWnhFdmxnUGFiYUF0NWs4CmpvWTIrdkRjRVVkU1Z6b09Kdkhm
-            Uy9rVXQ1REk1S09FbUtKODEyNjU4MGcKLS0tIE9hV0gxcDc2ZGNJc2ZsTnJ6dW1u
-            MThKeFRIekEyYkU1aWFQdHd3cEhIZWcKw6QdMkNLj/SlzC35PkMoFmcKRrA3Pv5r
-            a5L+GfRUhxWdP/v8opL9HlY+EWXMuOZL78piqrgJA6bb/3m0q2RDWw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyS3Ewb0hDb2h2NnY2d2Iy
+            TmtLMWhReitLR2VWMk1LNlhZSlRPcEVzZFVzCjc3M0toOXlmNFBTL05zVUNONlhh
+            WG5WT1ZaU0diSkhCVXdObGFNQUtjOVUKLS0tIDYvVjZ1OWZHWkV0WW5GZkV6bjQ4
+            UHhReGo3WE1pcXdqck96QkUyUzVJbm8KM8IiQ56o2TPaXzfcjuQNszAx/GtH5Nei
+            mxZcACh8J74Q+2Irt2t2dpIuRMevkI0oiKgW36kkrB8lyq6ieqP1Vg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T05:12:41Z"
-    mac: ENC[AES256_GCM,data:+0R+1XaLa5RV6k9cPTuVqKnXcg3UCEfDWt1Oy3e95jzbixMN6wjav9MSCWH5BPWXIGHzi4eilY2qrrXJuFSEkgssw+1yJqWVAVwHuFdNbvGCkP0jo5SiGE7f+CHviotPbY0sswQFEKCAihPvFjNcpDPObGJyhOuP5E9JiT1WUDM=,iv:HTt1bl/qO6j9K/CQS3eKMgSjytdnboqZaAT1RE5+lJs=,tag:hFmQySuxDsSrxXKiJMVwbQ==,type:str]
+    lastmodified: "2023-01-29T22:11:07Z"
+    mac: ENC[AES256_GCM,data:qwkyW2PCaY6hNshwfH+zswTNRMYl5IQAqHcDTUpDPcHZDcPBcLSqCCE4FuxO7mtu1gL0FT9ZOnXX+Sws/ZaToeFDrK5ox4xFC5XCyz2MKEbcB1nTZ6Mro60feLUClW8r2jr7Mx/ycR7hhVzLZdIh9DQPprrOCy2bVqZ0K04Hj8E=,iv:AikP/a/PaT43TK82/Du9IuJG0MkTADjr9mjV48OMKzg=,tag:BF1UQk3d28Gm+q5GdhvySA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
