--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:sDKWpAdA,iv:FXhn12J+2T3KWBLhPn8joBNrEJNEKS/R8smwAW4bOhg=,tag:aU4dcc2HSL0WSHeWsTZLBw==,type:str]
-ansible_user: ENC[AES256_GCM,data:5nYbQ9YH,iv:a+0hBq1Lk5JUY6+XQKy2dhfJX7hsGKRiN3U+k++D3aw=,tag:8cV0oaEeSCr11F6Ir+83yA==,type:str]
+kind: ENC[AES256_GCM,data:mW9Sb4zu,iv:ytbhAmIHhb+kT+DIcsrbMWZZRvmrObU8nVJmPSEkUSE=,tag:xwOHcd2MUx7370lbhaRH2Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:zAwV/Thx,iv:xclqS8qis0ID/ESGYEZkOhNtfgSjPIHckqPStoHCbj0=,tag:XS4czCIMYq5Or10WBO/SGw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKbHMreG96eDNwMzc0MUtP
-            QWxvemhjd2tkTVFiNzNJdC9aMjZ0SjFqQngwCkZzaW9KdFRmenc2YmlXdC9aZ2FN
-            ZXpSNVZFbWkwRVdvMzQ0a0NFV0FGa1EKLS0tIDhsNVRReG1CdDZ6eFdOUFhSNlVF
-            RkdSMWFWejkyY1ErTmtBckVJSFpkWEUKcqn1/LnNBmFEKky19qpesG1JgVFCx3ZU
-            Oh7RJt33SWGRtCE7lDNtxx04MmqueQpn0vSpuiclQCQIXv2loX7kxA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWNUl4LzlMZk5PQm5wTjEz
+            T2lobUMwSEZ6MnkyQXVkemQySjVnOENoNFJFCjE1ZjBEb0tUK2Z5WXVVZ0VQczFO
+            SFBvbEozWlh4YUtNalVwU1YveXZMM2sKLS0tIGU1a0Jjanpjc0VMcFNKcmZtUlJk
+            di9ZcDVnLzNoTWFuczZxLys1YzIvcDgKQ/ydS20IIw5PG+rHXbvZOioJKtB1E738
+            YeUjc5DWZAKT8/8qQiYUdAES/jENScLnbhVABtT/1o/3OQgCt+pyJw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T05:12:41Z"
-    mac: ENC[AES256_GCM,data:SKHD+iwEK1MGNPY1rc/rxirS/+HqeqqWk8lshzAz1VHe8AQKjosx48FOWjwkNRWckw3l5/ER/VuNJjWMuiRNf/ICrwEuApQ1/LLZ2jB3rsmc0O02UYwciKQq+fOjuw0U10WafUBU67Gi0iIzZAk5SNaWIpUmsYveo5sdUhCnBWo=,iv:KqkbCVen+ehnaeKjRxu+F6Z7zJvxONO2/6fE0UIA4ug=,tag:XW7RN6DaY229CJ0/lvNNWw==,type:str]
+    lastmodified: "2023-01-29T22:11:07Z"
+    mac: ENC[AES256_GCM,data:QTL6oK+/FXENFk+u3HDRQTFUbM1qaFSrLzTBa588wrNrfHh6BVTxEq+gCiAKqjRxYKbcN4E38fCQF2wam76JsD4HEJ/4SU+XsOkGZF9STeYO7phiLGut09e3bzxhdWlVWj7un6L4jnLOrDEpEb1XLl6wodUUI703ZmZwGaQGGT4=,iv:s7AY0BGBtUGr8jYO9dimkpnXcIxB5GGD/v9qZcw8KgY=,tag:+7PK5zuKnXu4ZuhFCGc7YA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
