--- a/ansible/playbooks/vm-clone.yml
+++ b/ansible/playbooks/vm-clone.yml
@@ -7,15 +7,15 @@
       ansible.builtin.command: "qm clone 8000 {{ item.key1 }} --full true --storage local-lvm --name {{ item.key2 }}"
       with_items:
         - key1: "301"
-          key2: "k3s-1"
+          key2: "k3s-01"
         - key1: "302"
-          key2: "k3s-2"
+          key2: "k3s-02"
         - key1: "303"
-          key2: "k3s-3"
+          key2: "k3s-03"
         - key1: "304"
-          key2: "k3s-4"
+          key2: "k3s-04"
         - key1: "305"
-          key2: "k3s-5"
+          key2: "k3s-05"
     - name: Resize
       ansible.builtin.command: "qm resize {{ item.key1 }} scsi0 +10G"
       with_items:
@@ -25,7 +25,7 @@
         - key1: "304"
         - key1: "305"
     - name: Network
-      ansible.builtin.command: "qm set {{ item.key1 }} --ipconfig0 gw=192.168.1.1,ip={{ item.key2 }}/24"
+      ansible.builtin.command: "qm set {{ item.key1 }} --ipconfig0 gw=192.168.1.1,ip={{ item.key2 }}/16"
       with_items:
         - key1: "301"
           key2: "192.168.1.31"
@@ -37,4 +37,23 @@
           key2: "192.168.1.34"
         - key1: "305"
           key2: "192.168.1.35"
+---
+- name: NUC Clone VMs
+  hosts: nuc
+  become: true
+  tasks:
+    - name: Clone
+      ansible.builtin.command: "qm clone 8000 {{ item.key1 }} --full true --storage local-lvm --name {{ item.key2 }}"
+      with_items:
+        - key1: "307"
+          key2: "k3s-07"
+    - name: Resize
+      ansible.builtin.command: "qm resize {{ item.key1 }} scsi0 +25G"
+      with_items:
+        - key1: "307"
+    - name: Network
+      ansible.builtin.command: "qm set {{ item.key1 }} --ipconfig0 gw=192.168.1.1,ip={{ item.key2 }}/16"
+      with_items:
+        - key1: "307"
+          key2: "192.168.1.36"
 ...
