--- a/ansible/playbooks/vm-delete.yml
+++ b/ansible/playbooks/vm-delete.yml
@@ -7,53 +7,61 @@
 #   let i=$i+1
 # done
 - name: Delete VMs
-  hosts: nuc11
+  #hosts: nuc11
   become: true
   tasks:
-  - name: Delete ks3-1
-    community.general.proxmox_kvm:
-      api_user: tf@pam
-      api_token_id: "terraform_token"
-      api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
-      api_host: nuc11
-      name: k3s-1
-      state: absent
-      timeout: 300
-  - name: Delete ks3-2
-    community.general.proxmox_kvm:
-      api_user: tf@pam
-      api_token_id: "terraform_token"
-      api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
-      api_host: nuc11
-      name: k3s-2
-      state: absent
-      timeout: 300
-  - name: Delete ks3-3
-    community.general.proxmox_kvm:
-      api_user: tf@pam
-      api_token_id: "terraform_token"
-      api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
-      api_host: nuc11
-      name: k3s-3
-      state: absent
-      timeout: 300
-  - name: Delete ks3-4
-    community.general.proxmox_kvm:
-      api_user: tf@pam
-      api_token_id: "terraform_token"
-      api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
-      api_host: nuc11
-      name: k3s-4
-      state: absent
-      timeout: 300
-  - name: Delete ks3-5
-    community.general.proxmox_kvm:
-      api_user: tf@pam
-      api_token_id: "terraform_token"
-      api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
-      api_host: nuc11
-      name: k3s-5
-      state: absent
-      timeout: 300
-
+    - name: Delete ks3-01
+      community.general.proxmox_kvm:
+        api_user: tf@pam
+        api_token_id: "terraform_token"
+        api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
+        api_host: nuc11
+        name: k3s-01
+        state: absent
+        timeout: 300
+    - name: Delete ks3-02
+      community.general.proxmox_kvm:
+        api_user: tf@pam
+        api_token_id: "terraform_token"
+        api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
+        api_host: nuc11
+        name: k3s-02
+        state: absent
+        timeout: 300
+    - name: Delete ks3-03
+      community.general.proxmox_kvm:
+        api_user: tf@pam
+        api_token_id: "terraform_token"
+        api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
+        api_host: nuc11
+        name: k3s-03
+        state: absent
+        timeout: 300
+    - name: Delete ks3-04
+      community.general.proxmox_kvm:
+        api_user: tf@pam
+        api_token_id: "terraform_token"
+        api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
+        api_host: nuc11
+        name: k3s-04
+        state: absent
+        timeout: 300
+    - name: Delete ks3-05
+      community.general.proxmox_kvm:
+        api_user: tf@pam
+        api_token_id: "terraform_token"
+        api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
+        api_host: nuc11
+        name: k3s-05
+        state: absent
+        timeout: 300
+    - name: Delete ks3-07
+      community.general.proxmox_kvm:
+        api_user: tf@pam
+        api_token_id: "terraform_token"
+        api_token_secret: "ff81891e-6a47-4439-a1f4-f5b37773a21b"
+        api_host: nuc
+        name: k3s-07
+        state: absent
+        timeout: 300
 ...
