--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -38,6 +38,8 @@ spec:
           - default
           - networking
           - monitoring
+          - media
+          - longhorn-system
     podAnnotations:
       configmap.reloader.stakater.com/reload: hajimari-settings
     persistence:
