--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -23,6 +23,9 @@ stringData:
     SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:EGwgS0vBuEVO3cug,iv:hw135ci6T12oU6TyDN99bZyrG5BoE95z0hYDgQ8zWsE=,tag:hriCdh+oxuqX0zMSm/jEZg==,type:str]
     SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:QAsppQit5S4X,iv:MJcqDevVH0lW8kUYwLpO+UpqBQ3oirjluMkZ5oyV538=,tag:itYxMl2VlcPSfO89KwlS+g==,type:str]
     SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:AS1Px2IvHHo7,iv:RIcRZV9uYNmny0I+Am1HRw3IGKAdMPdbsSqI2bOu0ok=,tag:VgfOWmPPvDgOpBq/B0ELFA==,type:str]
+    GEOIPUPDATE_ACCOUNT_ID: ENC[AES256_GCM,data:55OuCUEZ,iv:7Ib2zZLW+fC6DeFRQ6jBjx+6FipuUCDsDHanIbOPXBU=,tag:zd6cb4c23F3fpQILySXyJw==,type:str]
+    GEOIPUPDATE_LICENSE_KEY: ENC[AES256_GCM,data:0wIyDV+1MLKqdpqaa1s8nQ==,iv:8ZWZbz7AcRhGHMsf8AqLWHIiu6S1Xj4MWdjfk0FU77k=,tag:7Z0V921Wdf9DH3UIfm+a6w==,type:str]
+    EDITIONS: ENC[AES256_GCM,data:Sgoq8609iTeeWD0zUQgAPKU5sT/V92nq8YpHD9fNKlp9zvayXtaCdf5TdA==,iv:R7/n0bIP31N9CGfj1ccPAtk1TfdFD0EotdJszXFY1Rg=,tag:sD3PHZYo9Z8IZj45E+U0hg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -38,8 +41,8 @@ sops:
             N3g1c1BZN1RnVmgyRkdaRkNIWmpkOG8KZksy56GDYRvUOyxSRvif3cDdcPS+mYJ3
             iw4xMm/5bsoTQ2ZR6IV/GOE0Cxxek5ElULfwQe/1x+O6hOMjzg74lw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-29T22:11:07Z"
-    mac: ENC[AES256_GCM,data:b3it6kLSYZ9RBcz7j8ZcQqu7W50Kx2ts86pRJf4YSN4TW2YJPEAU8fKBb1RnXEdnhWlnz5JOogZALJLZNBYOUnu+PsmFt95jiAYTwenXxOjvnAtVYMF7+rxyXBOTnJFoPPxGZwq0Znd3hZt/7TnxN60m/qmBV8uGDz6Bdj3k5Og=,iv:zV3MY/Y37ZfXB+r3XM6pccvBjFshNyRhTmhFRUiWPl8=,tag:AnfGiwHru/W51uttoWxtoQ==,type:str]
+    lastmodified: "2023-02-01T04:33:44Z"
+    mac: ENC[AES256_GCM,data:V1Vl0kSn8Gz/Ir7Ogmkm+bVpYOw6K8711hl5jb/bO+7CHyuqToTDMha0yL0hNL9hquvLpAqJ7Z5jIMOepxj07QEfqUxmOiKURPRpCX1yAdplHpAyaY4VtgP3IMCnjBZokpmjbRWA+nsN/9QpCZhE/cR3HzVWiVDFN2h/g5do0/4=,iv:ceXhw8dgkBC5ALRduZ7I+8gTQhlqouRqICr07IYCg2s=,tag:4CVsXDMU9hrVu35Lc8pSOA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
