--- a/kubernetes/apps/monitoring/loki/ks.yaml
+++ b/kubernetes/apps/monitoring/loki/ks.yaml
@@ -7,10 +7,8 @@ metadata:
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
-  dependsOn:
-    - name: cluster-apps-external-secrets-stores
-    - name: cluster-apps-minio
-    - name: cluster-apps-rook-ceph-cluster
+  # dependsOn:
+  #   - name: cluster-apps-rook-ceph-cluster
   path: ./kubernetes/apps/monitoring/loki/app
   prune: true
   sourceRef:
