--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -104,42 +104,43 @@ spec:
     gateway:
       enabled: true
       replicas: 3
-      # image:
-      #   registry: ghcr.io
-      #   repository: nginxinc/nginx-unprivileged
-      #   tag: 1.23-alpine
-      # ingress:
-      #   enabled: true
-      #   ingressClassName: nginx
-      #   annotations:
-      #     hajimari.io/enable: "false"
-      #   hosts:
-      #     - host: &host loki.devbu.io
-      #       paths:
-      #         - path: /
-      #           pathType: Prefix
-      #   tls:
-      #     - hosts:
-      #         - *host
+      image:
+        registry: ghcr.io
+        repository: nginxinc/nginx-unprivileged
+        tag: 1.23-alpine
       ingress:
         enabled: true
-        ingressClassName: traefik
+        ingressClassName: nginx
         annotations:
           hajimari.io/enable: "false"
-          cert-manager.io/cluster-issuer: "letsencrypt-production"
         hosts:
-          - "loki.${SECRET_DOMAIN}"
-        path: /
-        pathType: Prefix
+          - host: &host loki.${SECRET_DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
           - hosts:
-              - "loki.${SECRET_DOMAIN}"
-            secretName: "loki.${SECRET_DOMAIN}"
+              - *host
+      # ingress:
+      #   enabled: true
+      #   ingressClassName: traefik
+      #   annotations:
+      #     hajimari.io/enable: "false"
+      #     cert-manager.io/cluster-issuer: "letsencrypt-production"
+      #   hosts:
+      #     - "loki.${SECRET_DOMAIN}"
+      #   path: /
+      #   pathType: Prefix
+      #   tls:
+      #     - hosts:
+      #         - "loki.${SECRET_DOMAIN}"
+      #       secretName: "loki.${SECRET_DOMAIN}"
     write:
       replicas: 3
       persistence:
-        size: 10Gi
-        storageClass: local-path
+        size: 5Gi
+        #storageClass: local-path
+        storageClass: longhorn
     read:
       replicas: 3
       extraVolumeMounts:
