--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
   - ./metrics-server.yaml
   - ./node-feature-discovery.yaml
   - ./nfs-subdir-external-provisioner.yaml
+  - ./portainer.yaml
   - ./prometheus-community.yaml
   # - ./rook-ceph.yaml
   - ./stakater.yaml
