--- a/kubernetes/apps/media/bazarr/app/ingress.yaml
+++ b/kubernetes/apps/media/bazarr/app/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
-    hajimari.io/icon: mdi:filmstrip
+    hajimari.io/icon: mdi:subtitles-outline
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
 spec:
