--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -8,5 +8,6 @@ resources:
   - ./vpa/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./grafana/ks.yaml
+  - ./helm-dashboard/ks.yaml
   # - ./loki/ks.yaml
   # - ./vector/ks.yaml
