--- a/kubernetes/flux/repositories/helm/komodorio.yaml
+++ b/kubernetes/flux/repositories/helm/komodorio.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: komodorio-charts
+  name: komodorio
   namespace: flux-system
 spec:
   interval: 10m
