--- a/kubernetes/apps/monitoring/helm-dashboard/app/helm-release.yaml
+++ b/kubernetes/apps/monitoring/helm-dashboard/app/helm-release.yaml
@@ -4,7 +4,7 @@ kind: HelmRelease
 metadata:
   name: helm-dashboard
   namespace: monitoring
-  app.kubernetes.io/managed-by: helm
+  # app.kubernetes.io/managed-by: helm
 spec:
   interval: 5m
   chart:
