--- a/kubernetes/apps/networking/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/external-dns/app/helmrelease.yaml
@@ -22,6 +22,11 @@ spec:
     remediation:
       retries: 3
   values:
+    sources:
+      - service
+      - ingress
+    policy: sync
+    loglevel: debug
     interval: 2m
     # logLevel: debug
     provider: cloudflare
@@ -36,13 +41,11 @@ spec:
           secretKeyRef:
             name: external-dns-secret
             key: api-key
-    loglevel: debug
+
     extraArgs:
       - --cloudflare-proxied
       - --annotation-filter=external-dns.home.arpa/enabled in (true)
-    policy: sync
-    sources:
-      - ingress
+
     # sources: ["ingress"]
     # txtPrefix: k8s.
     # txtOwnerId: default
