externaldns debug logging

--- a/kubernetes/apps/networking/external-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/external-dns/app/helmrelease.yaml
@@ -26,9 +26,8 @@ spec:
       - service
       - ingress
     policy: sync
-    loglevel: debug
+    logLevel: debug
     interval: 2m
-    # logLevel: debug
     provider: cloudflare
     env:
       - name: CF_API_EMAIL
